figuring out layout issues in individual work pages

--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ main {
 /* Item page */
 .blue-skewt-featured {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 20px;
     background-color: rgba(255, 255, 255, 0.95);
     padding: 32px;
@@ -156,6 +156,7 @@ main {
     grid-template-columns: 1fr;
   }
 }
+
 
 .blue-skewt-featured-image {
     max-width: 400px;
